# OTUS_Cpp_Dev_Pro

./: CMakeLists.txt  README.md  main.cpp  test_version.cpp
.github/workflows/: 01_hw.yml  02_hw.yml  03_hw.yml  04_hw.yml
github/workflows/: 01_hw.yml
include/: lib_for_ip_filter.hpp  my_allocator.hpp  my_vectorContainer.hpp  my_vectorContainer.ipp  print_ip.hpp
lib/: CMakeLists.txt  lib.cpp
src/: ip_filter.cpp  main.cpp  print_ip.cpp
test/: test.cpp
